--- a/src/main/resources/templates/front/angular/service.tauri.mustache
+++ b/src/main/resources/templates/front/angular/service.tauri.mustache
@@ -5,11 +5,10 @@ import { DatabaseService } from '{{sharedPath}}/services/database.service';
 import { AlertService } from '{{sharedPath}}/components/alert/alert.service';
 import type { {{entityCapitalized}} } from '../models/{{entityLowerCase}}.model';
 
-const TABLE_NAME = '{{plural}}';
+const TABLE_NAME = '{{tableName}}';
 
 @Injectable({ providedIn: 'root' })
 export class {{entityCapitalized}}TauriService {
-
   private db = inject(DatabaseService);
   private alert = inject(AlertService);
 
