--- a/src/main/resources/templates/front/angular/model.mustache
+++ b/src/main/resources/templates/front/angular/model.mustache
@@ -1,6 +1,6 @@
 {{#fields}}
 {{#isManyToOne}}
-import {{openOne}} {{nameCapitalized}} } from '../../{{name}}/models/{{name}}.model';
+import {{openOne}} {{nameCapitalized}} } from '../../{{nameLowerCase}}/models/{{nameLowerCase}}.model';
 {{/isManyToOne}}
 {{/fields}}
 
