--- a/src/main/resources/templates/front/angular/service.tauri.mustache
+++ b/src/main/resources/templates/front/angular/service.tauri.mustache
@@ -5,7 +5,7 @@ import { DatabaseService } from '../../../shared/services/database.service';
 import { AlertService } from '../../../shared/components/alert/alert.service';
 import type { {{entityCapitalized}} } from '../models/{{entityLowerCase}}.model';
 
-const TABLE_NAME = '{{entityPluralLower}}';
+const TABLE_NAME = '{{table}}';
 
 @Injectable({ providedIn: 'root' })
 export class {{entityCapitalized}}Service {
