--- a/src/main/resources/templates/front/angular/view.component.mustache
+++ b/src/main/resources/templates/front/angular/view.component.mustache
@@ -9,8 +9,8 @@ import { AlertService } from '../../../shared/components/alert/alert.service';
 
 {{#fields}}
 {{#isManyToOne}}
-import {{openOne}} {{nameCapitalized}} } from '../../{{name}}/models/{{name}}.model';
-import  {{openOne}} {{nameCapitalized}}Service } from '../../{{name}}/services/{{name}}.service';
+import {{openOne}} {{nameCapitalized}} } from '../../{{nameLowerCase}}/models/{{nameLowerCase}}.model';
+import  {{openOne}} {{nameCapitalized}}Service } from '../../{{nameLowerCase}}/services/{{nameLowerCase}}.service';
 {{/isManyToOne}}
 {{/fields}}
 
