--- a/src/main/resources/templates/front/angular/view.component.html.mustache
+++ b/src/main/resources/templates/front/angular/view.component.html.mustache
@@ -9,8 +9,21 @@
     />
 
     <h2 class="text-2xl font-bold text-center text-primary tracking-tight mb-6">
-      Détail {{entity}} #{{open}} item()?.id ?? id {{close}}
+      Détail {{entity}}
     </h2>
+
+    {{#items}}
+        <div class="flex flex-col gap-3 mt-8 md:mt-0">
+            <div *ngIf="item()">
+            <app-entity-item-list
+                [items]="{{.}}()"
+                [itemTitle]="'{{.}} '"
+                [columns]="[
+                        { key: 'name', label: 'label' }
+                      ]"/>
+            </div>
+        </div>
+    {{/items}}
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="md:col-span-2 flex flex-col gap-6">
