--- a/src/main/resources/templates/front/angular/formComponent.mustache
+++ b/src/main/resources/templates/front/angular/formComponent.mustache
@@ -91,7 +91,9 @@ fileManagerService = inject(FileManagerService);
       type: '{{type}}'{{#options}}, options: {{options}}{{/options}},
       entityType: '{{entityType}}' ,
       inputType: '{{inputType}}',
-      relation: '{{relation}}'
+      relation: '{{relation}}',
+      nullable: {{nullable}}
+
       },
       {{/isFiles}}
     {{/editableFields}}
