--- a/src/main/resources/templates/front/angular/listHtml.mustache
+++ b/src/main/resources/templates/front/angular/listHtml.mustache
@@ -166,3 +166,7 @@
   {{/isFileManager}}
   [isFileManager]= {{isFileManager}}
 />
+
+<div class="flex justify-end mt-4">
+    <button class="btn btn-warning " (click)="deleteAll()">supprimer tous</button>
+</div>
